# VectorDB

./: CMakeLists.txt  README.md  README.md_origin
srcs/: config.hpp  diskindex_data.cpp  diskindex_data.hpp  edgeweightcalc.cpp
web/: README.md
